# learn_mkdocs

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
learn_mkdocs/: cool.py
